--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "xo": "xo"
   },
   "dependencies": {
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.3",
     "minimist": "^1.2.5"
   },
   "devDependencies": {
